# claude-in-the-shell

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
ai_docs/: README.md  agent-behavior.md  architecture.md  code-standards.md  dev-commands.md  future-features.md  huggingface-datasets.md  mcp-tools-quick-ref.md  memory-system.md  port-configuration.md  sdk-integration.md
api/agent/: index.html
api/configuration/: index.html
api/mcp-servers/: index.html
api/mcp-tools/: index.html
api/memory/: index.html
api/motion-blending/: index.html
api/permissions/: index.html
api/sdk-motion-control/: index.html
api/simulation/: index.html
api/voice-pipeline/: index.html
architecture/agent-loop/: index.html
architecture/daemon-compatibility/: index.html
architecture/overview/: index.html
architecture/personas/: index.html
architecture/voice-pipeline/: index.html
config/: default.yaml  expressions.yaml  permissions.yaml
data/emotions/: amazed1.json  anxiety1.json  attentive1.json  attentive2.json  boredom1.json  boredom2.json  calming1.json  cheerful1.json  come1.json  confused1.json  contempt1.json  curious1.json  dance1.json  dance2.json  dance3.json  disgusted1.json  displeased1.json  displeased2.json  downcast1.json  dying1.json  electric1.json  enthusiastic1.json  enthusiastic2.json  exhausted1.json  fear1.json  frustrated1.json  furious1.json  go_away1.json  grateful1.json  helpful1.json  helpful2.json  impatient1.json  impatient2.json  incomprehensible2.json  indifferent1.json  inquiring1.json  inquiring2.json  inquiring3.json  irritated1.json  irritated2.json  (+42 more)
data/wake_words/: README.md  hey_batou.onnx  hey_batou.tflite  hey_motoko.onnx  hey_motoko.tflite
docs/: README.md  index.md
docs/api/: agent.md  configuration.md  mcp-servers.md  mcp-tools.md  memory.md  motion-blending.md  permissions.md  sdk-motion-control.md  simulation.md  voice-pipeline.md
docs/architecture/: agent-loop.md  daemon-compatibility.md  overview.md  personas.md  voice-pipeline.md
docs/guides/: phase2-preparation.md  raspberry-pi-installation.md  troubleshooting.md  voice-pipeline-setup.md
docs/planning/: EPCC_CODE.md  EPCC_PLAN.md  PRD.md  REACHY_CLAUDE_AGENT_SDK.md  TECH_REQ.md
docs/tutorials/: README.md  getting-started.md  quick-reference.md
guides/phase2-preparation/: index.html
guides/raspberry-pi-installation/: index.html
guides/troubleshooting/: index.html
guides/voice-pipeline-setup/: index.html
planning/EPCC_CODE/: index.html
planning/EPCC_PLAN/: index.html
planning/PRD/: index.html
planning/REACHY_CLAUDE_AGENT_SDK/: index.html
planning/TECH_REQ/: index.html
prompts/context/: owner.md  session.md
prompts/expressions/: emotion_guidance.md
prompts/integrations/: services.md
prompts/personas/: batou.md  motoko.md
prompts/system/: default.md  personality.md
scripts/: demo_motion_blend.py  download_emotions.py  live_demo.py  perf_baseline.py  validate_agent_e2e.py  validate_mcp_e2e.py  validate_mcp_protocol.py  validate_simulation.py
search/: search_index.json
src/reachy_agent/: __init__.py  __main__.py  main.py
src/reachy_agent/agent/: __init__.py  agent.py  loop.py  options.py
src/reachy_agent/behaviors/: __init__.py  blend_controller.py  breathing.py  idle.py  motion_types.py  wobble.py
src/reachy_agent/cli/: __init__.py  repl.py
src/reachy_agent/emotions/: __init__.py  loader.py
src/reachy_agent/errors/: __init__.py  codes.py  responses.py
src/reachy_agent/expressions/: __init__.py
src/reachy_agent/mcp_servers/: __init__.py
src/reachy_agent/memory/: __init__.py  context_builder.py  embeddings.py  manager.py  types.py
src/reachy_agent/perception/: __init__.py
src/reachy_agent/permissions/: __init__.py  hooks.py  tiers.py
src/reachy_agent/privacy/: __init__.py
src/reachy_agent/resilience/: __init__.py
src/reachy_agent/simulation/: __init__.py  adapter.py  daemon_launcher.py  reachy_client.py
src/reachy_agent/utils/: __init__.py  config.py  logging.py
src/reachy_agent/voice/: __init__.py  audio.py  errors.py  openai_realtime.py  persona.py  pipeline.py  recovery.py  test_harness.py  vad.py  wake_word.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_daemon_mock.py  test_mcp_integration.py  test_permission_flow.py
tests/simulation/: __init__.py  test_simulation_adapter.py
tests/unit/: __init__.py  test_chroma_store.py  test_config.py  test_context_builder.py  test_daemon_client_emotions.py  test_emotion_loader.py  test_errors.py  test_handlers.py  test_mcp_server.py  test_memory_manager.py  test_memory_types.py  test_motion_blend.py  test_options.py  test_permissions.py  test_persona.py  test_persona_switching.py  test_recovery.py  test_sdk_client.py  test_sqlite_store.py
tutorials/: index.html
tutorials/getting-started/: index.html
tutorials/quick-reference/: index.html
(+29 files in other folders)
