[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reachy-agent"
version = "0.1.0"
description = "An embodied AI agent for Reachy Mini robot powered by Claude Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jawhny Cooke" }
]
keywords = ["robot", "ai", "agent", "claude", "mcp", "reachy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Claude Agent SDK and MCP
    "anthropic>=0.40.0",
    "mcp>=1.0.0",

    # Async and HTTP
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",

    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",

    # Logging
    "structlog>=24.0.0",

    # Memory system (Phase 3, but needed for models)
    "chromadb>=0.5.0",

    # CLI and terminal UI
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
# Perception stack (Phase 2+)
perception = [
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pyroomacoustics>=0.7.0",
]

# Offline fallback stack (Phase 2+)
offline = [
    "piper-tts>=1.2.0",
    "faster-whisper>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=24.1.0",
    # For mock daemon integration tests
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

# Documentation
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

# All optional dependencies
all = [
    "reachy-agent[perception,offline,dev,docs]",
]

[project.scripts]
reachy-agent = "reachy_agent.main:main"
reachy-setup = "scripts.setup_wizard:main"

[project.urls]
Homepage = "https://github.com/jawhnycooke/reachy-agent"
Documentation = "https://github.com/jawhnycooke/reachy-agent#readme"
Repository = "https://github.com/jawhnycooke/reachy-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/scripts",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["reachy_agent"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "simulation: Tests that require MuJoCo simulation daemon",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/reachy_agent"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used - needed for tests
